[web] Avoid the form select toggle icon overlapping text
By overriding the default PatternFly styles

--- a/web/src/assets/styles/blocks.scss
+++ b/web/src/assets/styles/blocks.scss
@@ -339,8 +339,4 @@ span.notification-mark[data-variant="sidebar"] {
   input {
     text-align: end;
   }
-
-  select {
-    inline-size: 8ch;
-  }
 }
